--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
 html,
 body {
   height: 100%;
@@ -6,8 +9,6 @@ body {
   overflow: hidden;
   /* Prevent scrolling */
 }
-
-
 
 .configurator {
   width: auto;
@@ -23,11 +24,11 @@ body {
   /* Ensure padding is included in the element's total width and height */
   overflow: auto;
   /* Allow internal scrolling if content overflows */
-  background-image: url('../assets/background_image.png');
+  background-image: url("../assets/background_image.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -44,7 +45,7 @@ div.configurator-header {
   align-items: center;
   border-radius: 24px;
   padding: 24px;
-  background: rgba(255, 255, 255, 0.60);
+  background: rgba(255, 255, 255, 0.6);
   box-shadow: 4px 6px 20.3px 5px rgba(0, 0, 0, 0.92);
 }
 
@@ -71,17 +72,46 @@ div.configurator-header {
   /* Initially hide the video */
 }
 
-#control_btns {
+/* #control_btns {
   display: flex;
   justify-content: center;
   width: 100%;
   gap: 16px;
   border-radius: 16px;
-  background: rgba(255, 255, 255, 0.60);
+  background: rgba(255, 255, 255, 0.6);
   box-shadow: 4px 6px 20.3px 5px rgba(0, 0, 0, 0.92);
   padding: 24px;
   width: 100%;
+} */
 
+#control_btns {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  gap: 16px;
+  border-radius: 16px;
+  background: rgba(255, 255, 255, 0.6);
+  box-shadow: 4px 6px 20.3px 5px rgba(0, 0, 0, 0.92);
+  padding: 24px;
+  width: 100%;
+}
+
+.btn-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.btn-title {
+  margin-top: 5px;
+  font-size: 16px;
+  font-weight: 200;
+  color: black;
+}
+
+.btn-container .btn.active+.btn-title {
+  font-weight: 900;
 }
 
 button.btn {
@@ -91,20 +121,37 @@ button.btn {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: flex;
   flex-direction: column;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
-.btn img {
-  padding: 10px 20px;
-  height: auto;
-  width: 100%;
+#control_btns .btn.active {
+  background-color: #e0ebba;
+  box-shadow: 4px -4px 7px rgba(0, 0, 0, 0.15), -4px 4px 7px rgba(0, 0, 0, 0.15);
 }
-.arrows{
+
+#control_btns .btn.active img {
+  filter: grayscale(100%) brightness(0);
+  /* Change image to black */
+}
+
+button.btn img {
+  padding: 10px 20px;
+  height: 50px;
+  /* Set a fixed height */
+  width: 50px;
+  transition: filter 0.3s ease;
+}
+
+button.btn:active img {
+  filter: brightness(0.8);
+}
+
+.arrows {
   display: flex;
   width: 60%;
   flex-direction: row-reverse;
-  position:absolute;
+  position: absolute;
   left: 20%;
   align-items: center;
   justify-content: space-between;
@@ -121,7 +168,58 @@ button.btn {
   gap: 10px;
   flex-shrink: 0;
   border-radius: 16px;
-  background: rgba(255, 255, 255, 0.60);
+  background: rgba(255, 255, 255, 0.6);
   box-shadow: 4px 6px 20.3px 5px rgba(0, 0, 0, 0.92);
   border: none;
 }
+
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 1000;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
+.overlay-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.overlay-image {
+  width: 100%;
+  height: auto;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.close-btn img {
+  width: 20px;
+  height: 20px;
+}
+
+#info-img {
+  width: 75%;
+  height: auto;
+  flex-shrink: 0;
+  overflow: none;
+}
+
